--- a/all.html
+++ b/all.html
@@ -5,13 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel = "stylesheet" href = "all.css">
 	</head>
-	<body>
+	<body onresize="changeBlock()">
 		<nav>
 			<img id = "logo">
 			<a href = "">Home</a>
 			<a href = "">Menu and Order</a>
 			<a href = "">Pickup</a>
 			<a href = "">About</a>
+
+			<a href = "" class = "icon_like"><img id = "one"></a>
+			<a href = "" class = "icon_like"><img id = "two"></a>
+			<a href = "" class = "icon_like"><img id = "three"></a>
+			<a href = "" class = "icon_like"><img id = "four"></a>
 		</nav>
+
+		<script src = "all.js"></script>
 	</body>
 </html>
