--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Basic Template</title>
+		<title>Homepage</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel = "stylesheet" href = "all.css">
+		<link rel = "stylesheet" href = "homepage.css">
 	</head>
 	<body>
 		<nav>
@@ -18,6 +18,17 @@
 			<a href = "">About</a>			
 		</nav>
 
+		<div id = "container1">
+			<h1>Eat Whatever <br>Whenever <br> And <br> Earn Money</h1>
+			<p id = "main_container_info">Introducing to you the one of its kind food ordering system that helps you save time and makes you get the food at your doorstep.</p>
+
+			<a href = "placeorder.html" id = "place_order"><p><img class = "arrow_forward">Place Order </p></a>
+			<p>or <a>pick-up an order</a></p>
+		</div>
+
+		<div id = "container2">
+
+		</div>
 		<script src = "all.js"></script>
 	
 		<div class="footer">
