--- a/homepage.html
+++ b/homepage.html
@@ -19,11 +19,12 @@
 		</nav>
 
 		<div id = "container1">
+			<img id = "side_image">
 			<h1>Eat Whatever <br>Whenever <br> And <br> Earn Money</h1>
 			<p id = "main_container_info">Introducing to you the one of its kind food ordering system that helps you save time and makes you get the food at your doorstep.</p>
 
 			<a href = "placeorder.html" id = "place_order"><p><img class = "arrow_forward">Place Order </p></a>
-			<p>or <a>pick-up an order</a></p>
+			<p id = "or">or <span class = "red"><a href = "pickup.html">pick-up an order</a></p>
 		</div>
 
 		<div id = "container2">
