--- a/menu_page.html
+++ b/menu_page.html
@@ -227,27 +227,24 @@
         </div>
 
 
-
-
-
-
-
-
         <div class="cart">
             <h2>Your Order:</h2>
+            <form>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" required><br>
+              <label for="location">Location:</label>
+              <input type="text" id="location" name="location" required><br>
+              <label for="batch">Batch:</label>
+              <input type="text" id="batch" name="batch" required>
+            </form>
             <div class="cart-list">
               <!-- <p class="empty-cart">Your Cart</p> -->
             </div>
-            <button class="checkout-btn">Checkout</button>
+            <div class="cart-buttons">
+                <button class="checkout-btn">Checkout</button>
+              </div>
           </div>
-
-
-
-
-
-
-
-
+          
     <div class="footer">
         <div id="gradient"></div><b>
             <p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class="colorspan">Ansh
