--- a/aboutpage.html
+++ b/aboutpage.html
@@ -37,11 +37,13 @@
 			<h1 id = "bipasha"><span>Bipasha Garg</span></h1>
 			<h1 id = "ishita"><span>Ishita Bansal</span></h1>
 			<br>
+			<img src="Images\Clipart1.jpeg" align="right">
+			<br><br><br><br><br><br><br>
+			<img src="Images\Clipart2.jpeg" align="right" style="margin-right:20%;">
+			<br><br><br><br><br><br><br>
+			<img src="Images\Clipart3.jpeg" align="right" style="margin-right:10%;">
 			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+			
 			<h1 id = "ansh"><span>Ansh Chablani</span></h1>
 		</div>
 		<div class="footer">
