--- a/pickuppage.html
+++ b/pickuppage.html
@@ -1,1 +1,40 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="pick_page.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <nav>
+        <img id="logo">
+        <!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
+        <a href="">Home</a>
+        <!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
+        <a href="">Menu and Order</a>
+        <!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
+        <a href="">Pickup</a>
+        <!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
+        <a href="">About</a>
+    </nav>
+
+
+
+    <div class="footer">
+        <div id="gradient"></div><b>
+            <p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class="colorspan">Ansh
+                    Chablani</span> | <span class="colorspan">Ishita Bansal</span> | <span class="colorspan">Bipasha
+                    Garg</span> <br><br>
+                To know more about us, visit:
+                <a href="about.html">About</a>
+            </p>
+        </b>
+        <br />
+    </div>
+
+    <script src="pick_page.js"></script>
+</body>
+
+</html>
