--- a/aboutpage.html
+++ b/aboutpage.html
@@ -50,7 +50,7 @@
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="about.html" >About</a></p>
+			<a href="aboutpage.html" >About</a></p>
 			</b>
 			<br />
 		  </div>
