--- a/pickuppage.html
+++ b/pickuppage.html
@@ -9,15 +9,15 @@
 
 <body>
     <nav>
-        <img id="logo">
+        <img id = "logo">
         <!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-        <a href="">Home</a>
+        <a href = "homepage.html">Home</a>
         <!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-        <a href="">Menu and Order</a>
+        <a href = "menu_page.html">Menu and Order</a>
         <!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-        <a href="">Pickup</a>
+        <a href = "pickuppage.html">Pickup</a>
         <!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-        <a href="">About</a>
+        <a href = "aboutpage.html">About</a>			
     </nav>
 
 
@@ -28,7 +28,7 @@
                     Chablani</span> | <span class="colorspan">Ishita Bansal</span> | <span class="colorspan">Bipasha
                     Garg</span> <br><br>
                 To know more about us, visit:
-                <a href="about.html">About</a>
+                <a href="aboutpage.html">About</a>
             </p>
         </b>
         <br />
