--- a/aboutpage.html
+++ b/aboutpage.html
@@ -9,13 +9,13 @@
 		<nav>
 			<img id = "logo">
 			<!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-			<a href = "">Home</a>
+			<a href = "homepage.html">Home</a>
 			<!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-			<a href = "">Menu and Order</a>
+			<a href = "menu_page.html">Menu and Order</a>
 			<!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-			<a href = "">Pickup</a>
+			<a href = "pickuppage.html">Pickup</a>
 			<!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-			<a href = "">About</a>			
+			<a href = "aboutpage.html">About</a>			
 		</nav>
 		<div id = "container1">
 			<h1 id = "header1_exam_part">Exam next day?</h1><h1 id = "header1_stomach_part">Stomach Empty but no time to go out?</h1>
